--- a/index.html
+++ b/index.html
@@ -251,5 +251,20 @@
       </div>
     </section>
     
+    
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5fbe"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">♥ From Sekiro and his Team</p>
+      </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://discord.gg/V787cKR" target="_blank">
+        <span>Finding US?</span>
+      </a>
+      <p class="u-text">
+        <span>Our Address-</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>General VC</span>
+      </a>. 
+    </section>
   </body>
 </html>
