--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
         <p class="u-small-text u-text u-text-variant u-text-1">♥ From Sekiro and his Team</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://discord.gg/V787cKR" target="_blank">
-        <span>Finding US?</span>
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
       </a>
       <p class="u-text">
-        <span>Our Address-</span>
+        <span>created with</span>
       </p>
       <a class="u-link" href="" target="_blank">
-        <span>General VC</span>
+        <span>Website Builder Software</span>
       </a>. 
     </section>
   </body>
