--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-5e24"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-5e24"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="551" data-image-height="551">
           <img src="images/narutosage.jpg" class="u-logo-image u-logo-image-1">
         </a>
@@ -255,6 +255,16 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5fbe"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">♥ From Sekiro and his Team</p>
       </div></footer>
-	  
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   </body>
 </html>
