--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
       </div>
     </section>
     
-    
+    <section>
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5fbe"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">♥ From Sekiro and his Team</p>
       </div></footer>
-	  
+	  </section>  
   </body>
 </html>
