--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://www.youtube.com/channel/UC_sNq_LzrOHgCoZKZsQbImQ" target="_blank" style="padding: 10px 20px;">Youtube</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://www.youtube.com/channel/UC_sNq_LzrOHgCoZKZsQbImQ?sub_confirmation=1" target="_blank" style="padding: 10px 20px;">Youtube</a>
 </li></ul>
               </div>
             </div>
@@ -178,7 +178,7 @@
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-xs u-sheet-1">
         <h2 class="u-align-center u-text u-text-1">Looking for fun games Live Stream</h2>
         <p class="u-align-center u-text u-text-2">SUBSCRIBE ME ON YOUTUBE</p>
-        <a href="https://www.youtube.com/channel/UC_sNq_LzrOHgCoZKZsQbImQ" class="u-active-palette-1-dark-3 u-btn u-button-style u-hover-palette-1-dark-3 u-palette-1-base u-btn-1" target="_blank">YOUTUBE CHANNEL</a>
+        <a href="https://www.youtube.com/channel/UC_sNq_LzrOHgCoZKZsQbImQ?sub_confirmation=1" class="u-active-palette-1-dark-3 u-btn u-button-style u-hover-palette-1-dark-3 u-palette-1-base u-btn-1" target="_blank">YOUTUBE CHANNEL</a>
         <div class="u-align-left u-image u-image-circle u-image-1" data-image-width="626" data-image-height="417"></div>
         <div class="u-align-left u-image u-image-circle u-image-2" data-image-width="1200" data-image-height="990"></div>
         <div class="u-align-left u-image u-image-circle u-image-3" data-image-width="800" data-image-height="800"></div>
@@ -238,7 +238,7 @@
                         </a>
                         <a class="u-social-url" target="_blank" href="https://www.instagram.com/sekiro.sensei/" title="INSTAGRAM"><span class="u-icon u-icon-circle u-social-icon u-social-instagram u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-556d"></use></svg><svg x="0px" y="0px" viewBox="0 0 112.2 112.2" style="enable-background:new 0 0 112.2 112.2;" xml:space="preserve" id="svg-556d" class="u-svg-content"><path d="M56.1,0C25.1,0,0,25.1,0,56.1c0,31,25.1,56.1,56.1,56.1c31,0,56.1-25.1,56.1-56.1C112.2,25.1,87.1,0,56.1,0z M90.6,73.4c0,9.6-7.8,17.5-17.5,17.5H38.6c-9.6,0-17.5-7.9-17.5-17.6V38.8c0-9.6,7.8-17.5,17.5-17.5h34.5c9.6,0,17.5,7.8,17.5,17.5 V73.4z"></path><path d="M73.1,28.9H38.6c-5.4,0-9.9,4.4-9.9,9.9v34.5c0,5.4,4.4,9.9,9.9,9.9h34.5c5.4,0,9.9-4.4,9.9-9.9V38.8 C83,33.4,78.6,28.9,73.1,28.9z M55.9,74C46,74,38,66,38,56.1c0-9.9,8-17.9,17.9-17.9c9.9,0,17.9,8,17.9,17.9 C73.8,66,65.8,74,55.9,74z M74.3,41.9c-2.3,0-4.2-1.9-4.2-4.2s1.9-4.2,4.2-4.2c2.3,0,4.2,1.9,4.2,4.2S76.6,41.9,74.3,41.9z"></path><path d="M55.9,45.8c-5.7,0-10.4,4.6-10.3,10.3c0,5.7,4.6,10.3,10.3,10.3s10.3-4.6,10.3-10.3 C66.2,50.4,61.6,45.8,55.9,45.8z"></path></svg></span>
                         </a>
-                        <a class="u-social-url" target="_blank" href="https://www.youtube.com/channel/UC_sNq_LzrOHgCoZKZsQbImQ" title="YOUTUBE"><span class="u-file-icon u-icon u-icon-circle u-social-google u-social-icon u-icon-4"><img src="images/1384028.png" alt=""></span>
+                        <a class="u-social-url" target="_blank" href="https://www.youtube.com/channel/UC_sNq_LzrOHgCoZKZsQbImQ?sub_confirmation=1" title="YOUTUBE"><span class="u-file-icon u-icon u-icon-circle u-social-google u-social-icon u-icon-4"><img src="images/1384028.png" alt=""></span>
                         </a>
                       </div>
                     </div>
